--- a/v2ui/css/sticky-footer.css
+++ b/v2ui/css/sticky-footer.css
@@ -8,9 +8,10 @@ body {
 }
 #footer {
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
+  margin: 0px !important;
+  padding: 0px !important;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 40px;
-  background-color: #f5f5f5;
+  height: 30px;
 }
