--- a/dev/public/css/custom.css
+++ b/dev/public/css/custom.css
@@ -17,12 +17,10 @@ body {
   margin-right: 0;
   margin-left: 0;
 }
-
-hr {
+/*hr {
   margin-top:0px !important;
   padding-top:0px !important;
-}
-/* custom css */
+}*/
 #footer {
   position: absolute;
   bottom: 0px;
@@ -30,9 +28,6 @@ hr {
   padding: 0px !important;
   width: 100%;
   height: 30px;
-}
-.bo {
-  border:1px solid red;
 }
 /*.container {
   width: 1050px !important;
@@ -72,11 +67,18 @@ ol {
   text-align: center;
 }
 .w25 {
-  width: 25px !important;
+  height: 18px !important;
+  width: 18px !important;
+  margin: 0px !important;
+  padding: 0px !important;
 }
 .noMarginPadding {
   margin:0px;
   padding:0px;
+}
+/* debug classes */
+.bo {
+  border:1px solid red;
 }
 /* Always float the navbar header */
 .navbar-header {
