--- a/dev/public/css/custom.css
+++ b/dev/public/css/custom.css
@@ -26,25 +26,15 @@ body {
   bottom: 0px;
   margin: 0px !important;
   padding: 0px !important;
-  width: 100%;
+  text-align: center;
+  /*width: 100%;*/
   height: 30px;
 }
 /*.container {
   width: 1050px !important;
-}
-.mainNav ul {
-
 }*/
-.mainNav ul li {
-  /*width: 120px;*/
-  font-size: 100%;
-}
 .navbar-right {
   margin-right: 0px !important;
-}
-ol {
-  margin: 0 !important;
-  padding: 0 !important;  
 }
 .breadcrumb {
   background-color: #fff !important;
@@ -72,9 +62,11 @@ ol {
   margin: 0px !important;
   padding: 0px !important;
 }
-.noMarginPadding {
-  margin:0px;
-  padding:0px;
+.noMargin {
+  margin:0px !important;
+}
+.noPadding {
+  padding:0px !important;
 }
 /* debug classes */
 .bo {
