--- a/dev/public/css/custom.css
+++ b/dev/public/css/custom.css
@@ -62,6 +62,10 @@ body {
   margin: 0px !important;
   padding: 0px !important;
 }
+.w25heading {
+  font-size: 90%;
+  border: none;  
+}
 .statsBrowser {
   
 }
