--- a/dev/public/css/custom.css
+++ b/dev/public/css/custom.css
@@ -33,6 +33,21 @@ body {
 /*.container {
   width: 1050px !important;
 }*/
+table th input {
+  width: 100% !important;
+  font-weight: normal !important;
+  font-size: 90% !important;
+  margin: 0px !important;
+  padding: 0px 0px 0px 3px !important;
+  border: 1px solid #eee !important;
+}
+table th input:focus {
+  width: 100% !important;
+  font-weight: normal !important;
+  margin: 0px !important;
+  padding: 0px 0px 0px 3px !important;
+  border: 1px solid #eee !important;
+}
 .navbar-right {
   margin-right: 0px !important;
 }
